inter/Tests/Invalid/duped.intert
packagetype _plain

package main _plain
	typename K_number = int32
	typename K_number = int2
